--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.5
+  scoped_model: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -88,3 +90,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+analyzer:
+  strong-mode: true
+  language:
+    enableSuperMixins: true
+  errors:
+    mixin_inherits_from_not_object: ignore
